// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`для события отмены если есть код ошибки отправит метрику с ним 1`] = `
Array [
  "vas",
  "cars",
  "lk",
  "error",
  "top",
  "MY_ERROR",
]
`;

exports[`для события отмены если нет кода ошибки отправит метрику с NA 1`] = `
Array [
  "vas",
  "cars",
  "lk",
  "error",
  "top",
  "NA",
]
`;

exports[`правильно отправит метрику для мобилки 1`] = `
Array [
  "vas",
  "m",
  "cars",
  "lk",
  "shows",
  "top",
]
`;

exports[`правильно формирует параметры для логов 1`] = `
Array [
  "vas",
  "cars",
  "lk",
  "shows",
  "top",
]
`;

exports[`правильно формирует параметры для логов 2`] = `
Object {
  "vas_show_event": Object {
    "base_price": 1499,
    "category": "CARS",
    "effective_price": 999,
    "offer_id": "12345678-abcdef",
    "product": "top",
    "vas_from": "new-lk-tab",
  },
}
`;

exports[`умеет запоминать дефолтные параметры и переопределять их 1`] = `
Object {
  "vas_show_event": Object {
    "base_price": 1499,
    "category": "CARS",
    "effective_price": 999,
    "offer_id": "12345678-abcdef",
    "product": "top",
    "vas_from": "edit_form",
  },
}
`;

exports[`умеет запоминать дефолтные параметры и переопределять их 2`] = `
Array [
  "vas",
  "cars",
  "form",
  "shows",
  "top",
]
`;
